systemd-genie (1.36) buster bullseye bookworm sid focal bionic; urgency=medium

        * Added dependency on hostname.
        * Added --is-running and --is-in-bottle informational options.
        * Added storage of systemd external PID in pidfile.
        * Removed dependencies on mount and hostname.

 -- Alistair Young <avatar@arkane-systems.net>  Fri, 12 Mar 2021 11:24:00 -0500

systemd-genie (1.35) buster bullseye bookworm sid focal bionic; urgency=medium

        * Added dependency on systemd 232.
        * Revised build procedure.

 -- Alistair Young <avatar@arkane-systems.net>  Sun, 21 Feb 2021 13:40:00 -0500

systemd-genie (1.34) unstable; urgency=medium

        * Fixed regression: restored gawk dependency.

 -- Alistair Young <avatar@arkane-systems.net>  Tue, 26 Jan 2021 08:48:00 -0500

systemd-genie (1.33) unstable; urgency=medium

        * Removed faulty root check.

 -- Alistair Young <avatar@arkane-systems.net>  Sat, 23 Jan 2021 11:38:00 -0500

systemd-genie (1.32) unstable; urgency=medium

        * Added error-checking to configuration variables.
        * [genie -c] Preserved args containing spaces.
        * Refactored code into multiple classes.
        * Replaced runinwsl with executable to enable space-preservation.

 -- Alistair Young <avatar@arkane-systems.net>  Mon, 18 Jan 2021 11:15:00 -0500

systemd-genie (1.31) unstable; urgency=medium

        * Fixed bug in path cloning.
        * Added wait on initialize for systemd to be fully running.
        * Updated documentation accordingly.

 -- Alistair Young <avatar@arkane-systems.net>  Wed, 13 Jan 2021 11:26:00 -0500

systemd-genie (1.30) unstable; urgency=medium

        * Changed to precompile .NET code.
        * Added appending of outside-bottle path to inside-bottle path
          (with dedupe) as option.
        * Moved saving of environment variables into binary, with
          configuration option in genie.ini.
